# difference-generator

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
gendiff/: __init__.py  difference_generator.py  normalizer.py  parser.py  selectors.py
gendiff/formatters/: json.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
gendiff/tests/: gendiff_test.py
gendiff/tests/fixtures/: right_result.py
gendiff/tools/: difference_generator.py
tests/: gendiff_test.py  test_gendiff.py
tests/fixtures/: json.json  right_result.py
