[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
authors = ["Midnight95 <ivanator666@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]



[tool.poetry.dependencies]
python = ">=3.11.3,<4.0"
pyyaml = "^6.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
coverage = "^7.2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
